# installed_pkg

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs  main.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
