[package]
name = "installed_pkg"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple cross-platform crate that lists all the apps installed on a system."
keywords = ["installed", "app", "application", "pkg"]
categories = ["os","os::windows-apis", "os::linux-apis", "os::macos-apis"]
authors = ["JK Guo <guojikun486546@163.com>"]
repository = "https://github.com/GuoJikun/installed_pkg"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"
lnk = "0.5.1"